--- a/BarcodeReader/Info.plist
+++ b/BarcodeReader/Info.plist
@@ -60,5 +60,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>App uses camera for scanning barcodes</string>
 </dict>
 </plist>
